fix css problem in plugin
